=== 0.0.6 / 2010-XX-XX
* Douban::Authorize
  * add verify_token and delete_token
  * support get_book(:isbn => isbn)
  * support get_movie(:imdb => imdb)
* Douban::Book
  * add method: isbn, isbn10, isbn13

=== 0.0.5 / 2010-07-04
* Douban::Authorize
  * all modify_* functions will return an Object if success, otherwise nil. In
    old version, it will return true or false.
  * all create_* and delete_* will correctly escape the param for xml.
  * all the functions return list will work correctly
* all the .rb files can be loaded. (you don't have to load from douban.rb)
* some bug fix.

=== 0.0.4 / 2010-07-03
* Douban::Authorize
  * all create_* functions (except create_mail) will return an Object if 
    success, otherwise nil, in old version, it will return true or false.
    create_mail does not work like other functions, it's should be named 
    as send_mail.
  * some refactors on the model classes.

=== 0.0.3 / 2010-07-02
* Douban::Authorize
  * recommendation apis added
    * get_recommendation
    * get_user_recommendations
    * get_recommendation_comments
    * create_recommendation
    * delete_recommendation
    * create_recommendation_comment
    * delete_recommendation_comment

=== 0.0.2 / 2010-07-01
* Douban.authorize no longer works, you need use Douban::Authorize.new
* Douban::Authorize
  * you can restore request token with request_token=
  * you can restore access token with access_token=
  * create_miniblog will quote +content+ parameter
  * create_miniblog will return a Douban::Miniblog if success, otherwise return nil
* add some test with rspec

=== 0.0.1 / 2010-06-30

* import from http://code.google.com/p/doubanclient-ruby/